[package]
name = "rust-example"
version = "0.1.0"
authors = ["Clay Ratliff <indulge.the.wild@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
redis = { version = "0.18.0", features = ["tls"] }
structopt = "0.3"
